@@ -109,8 +109,6 @@ namespace wxSFCommonFcn
 	{
 		return sqrt((pt2.x - pt1.x)*(pt2.x - pt1.x) + (pt2.y - pt1.y)*(pt2.y - pt1.y));
 	}
-
-	//----------------------------------------------------------------------------------//
-	// xml functions
-	//----------------------------------------------------------------------------------//
 }
+
+
